login y logout actualizado, procederemos a ir poco a poco montando cada vista

--- a/crm-fontanero-frontend/src/app/components/clients/pages/client.component.html
+++ b/crm-fontanero-frontend/src/app/components/clients/pages/client.component.html
@@ -29,3 +29,4 @@
 }
 <button (click)="reload()">Recargar</button>
 <button (click)="goStock()">Stock</button>
+<button (click)="logOut()">Cerrar Sesion</button>
