--- a/crm-fontanero-frontend/src/app/components/clients/pages/client.component.html
+++ b/crm-fontanero-frontend/src/app/components/clients/pages/client.component.html
@@ -1,4 +1,7 @@
 <h2>Clientes</h2>
+
+<div class="text-green-500 text-2x1">Tailwind funciona ✔</div>
+
 @if (clients.length > 0) {
   <table>
     <thead>
@@ -29,4 +32,3 @@
 }
 <button (click)="reload()">Recargar</button>
 <button (click)="goStock()">Stock</button>
-<button (click)="logOut()">Cerrar Sesion</button>
