--- a/crm-fontanero-frontend/src/app/shared/sidebar/sidebar.component.css
+++ b/crm-fontanero-frontend/src/app/shared/sidebar/sidebar.component.css
@@ -1,12 +1,4 @@
 /* ===== Sidebar ===== */
-.sidebar {
-  width: 280px; /* ancho fijo y cómodo en desktop */
-  max-width: 85vw;
-  background: linear-gradient(180deg, #84abddb6 0%, #1a3f90 100%);
-  color: #e8f0fe;
-  padding: 8px 8px 16px;
-}
-
 .brand {
   display: flex;
   align-items: center;
@@ -46,19 +38,56 @@
   background: rgba(255, 255, 255, 0.12);
 }
 
+/*Boton logout*/
+
 .sidebar-bottom {
   position: absolute;
-  bottom: 50px;
+  bottom: 40px;
   left: 12px;
   right: 12px;
   display: flex;
   justify-content: center;
 }
 
-.logout {
-  background-color: whitesmoke;
+/* Botón neumórfico moderno */
+.logout-btn {
+  background: #111;
+  color: white;
+  padding: 12px 26px;
+  border-radius: 40px;
+  font-weight: 500;
+  font-size: 14px;
+
+  display: flex;
+  align-items: center;
+  gap: 8px;
+
+  box-shadow:
+    4px 4px 10px rgba(0, 0, 0, 0.4),
+    -4px -4px 10px rgba(255, 255, 255, 0.04);
+  transition: all 0.25s ease;
 }
 
-.logout mat-icon {
-  margin-right: 6px;
+/* Hover */
+.logout-btn:hover {
+  transform: translateY(-2px);
+  box-shadow:
+    6px 6px 12px rgba(0, 0, 0, 0.45),
+    -4px -4px 10px rgba(255, 255, 255, 0.05);
+  background: #000;
 }
+
+/* Active (click) */
+.logout-btn:active {
+  transform: translateY(1px);
+  box-shadow:
+    inset 4px 4px 10px rgba(0, 0, 0, 0.5),
+    inset -4px -4px 10px rgba(255, 255, 255, 0.03);
+}
+
+.logout-btn mat-icon {
+  font-size: 20px;
+}
+
+
+
