--- a/crm-fontanero-frontend/src/styles.css
+++ b/crm-fontanero-frontend/src/styles.css
@@ -13,3 +13,12 @@ body {
     'GRAD' 0,
     'opsz' 24;
 }
+
+/*Evitar scroll horizontal en sidebar*/
+.mat-drawer-inner-container {
+  overflow-x: hidden !important;
+}
+
+
+
+
