pendiente integrar spinner en navegacion y recargar el delete en clientes

--- a/crm-fontanero-frontend/src/app/components/main/pages/clients/pages/client.component.html
+++ b/crm-fontanero-frontend/src/app/components/main/pages/clients/pages/client.component.html
@@ -61,7 +61,7 @@
             <button mat-icon-button color="warn" (click)="onDelete(c)">
               <mat-icon>delete</mat-icon>
             </button>
-            <button mat-icon-button (click)="onView()"><mat-icon>visibility</mat-icon></button>
+            <button mat-icon-button (click)="onView(c)"><mat-icon>visibility</mat-icon></button>
           </div>
         </mat-card>
       </div>
