--- a/crm-fontanero-frontend/src/app/components/main/pages/clients/pages/new-client/new-client.component.html
+++ b/crm-fontanero-frontend/src/app/components/main/pages/clients/pages/new-client/new-client.component.html
@@ -1,5 +1,5 @@
 <section class="add-client-container">
-  <h1>Añadir cliente</h1>
+  <h1>Nuevo cliente</h1>
 
   <form [formGroup]="clientForm" (ngSubmit)="addClient()">
     <mat-form-field appearance="outline" class="full-width">
