--- a/crm-fontanero-frontend/src/styles.css
+++ b/crm-fontanero-frontend/src/styles.css
@@ -19,6 +19,13 @@ body {
   overflow-x: hidden !important;
 }
 
+/*SNACK-BAR*/
+.snackbar-success {
+  background-color: #4caf50 !important;
+  color: white !important;
+}
 
-
-
+.snackbar-error {
+  background-color: #d32f2f !important;
+  color: white !important;
+}
