edicion y nuevo material, falta delete con confirmacion

--- a/crm-fontanero-frontend/src/app/components/main/pages/clients/pages/client.component.css
+++ b/crm-fontanero-frontend/src/app/components/main/pages/clients/pages/client.component.css
@@ -19,7 +19,7 @@
     font-size: 2rem;
   }
   .subtitulo {
-    margin: 2px 0 0;
+    margin: 5px 2px;
     color: rgba(0, 0, 0, 0.55);
   }
   .buscador {
