--- a/crm-fontanero-frontend/src/app/components/main/pages/stock/pages/new-stock-item/new-stock-item.component.html
+++ b/crm-fontanero-frontend/src/app/components/main/pages/stock/pages/new-stock-item/new-stock-item.component.html
@@ -12,8 +12,8 @@
     <mat-form-field appearance="outline" class="full-width">
       <mat-label>Tipo de material</mat-label>
       <mat-select formControlName="typeMaterial" required>
-        @for (t of materialTypes; track t.value) {
-          <mat-option [value]="t.value">
+        @for (t of materialTypes; track t.label) {
+          <mat-option [value]="t.label">
             {{ t.label }}
           </mat-option>
         }
